--- a/_layouts/section-contents.html
+++ b/_layouts/section-contents.html
@@ -14,6 +14,6 @@ layout: gift-wrap
   <div class="section-header">
       <h1 class="section"> {{ page.righttitle }} </h1>
   </div>
-  {% capture my_include %}{% include_relative la-teachers.markdown %}{% endcapture %}
+  {% capture my_include %}{% include la-teachers.markdown %}{% endcapture %}
   {{ my_include | markdownify }}
 </div>
