--- a/_layouts/contents.html
+++ b/_layouts/contents.html
@@ -2,6 +2,26 @@
 layout: gift-wrap
 ---
 
+<style>
+.right {
+        background: darksalmon;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        color: black;
+    }
+
+    p a {
+        color: black !important;
+        border-bottom: 2px solid black !important;
+    }
+
+    p a:hover {
+        border-bottom: 0px !important;
+    }
+
+</style>
+
 <div class="left">
 
     <div class="section-header">
