--- a/_layouts/gift-wrap.html
+++ b/_layouts/gift-wrap.html
@@ -10,12 +10,6 @@
 
     <link rel="stylesheet" type="text/css" href="{{"/assets/css/layout.css" | relative_url}}">
     <link href="https://fonts.googleapis.com/css2?family=Miniver&display=swap" rel="stylesheet">
-
-    <!-- <style>
-        .left {
-            background: darksalmon;
-        }
-    </style> -->
 </head>
 
 <body>
@@ -27,11 +21,10 @@
     <footer class="bottom">
         <ul class="nav">
             <li class="standout"> <a href="{{"colophon.html" | relative_url}}"> Direct Action for Prison Abolition </a> </span> </li>
-            <li> <img src="{{"/assets/squiggly-arrow.png" | relative_url}}" alt="long arrow pointing right"> </li>
-            <li> <a href="/" class="nav">Cover</a> </li>
+            <li> <img src="{{"/assets/squiggly-arrow.png" | relative_url}}" alt="long arrow pointing right" class="arrow"> </li>
+            <li> <a href="{{"index.html" | relative_url}}" class="nav">Cover</a> </li>
             <li> <a href="{{"/actions/contents.html" | relative_url}}" class="nav">Table of contents</a> </li>
-            <!-- <li> (Current Page Title) </li> -->
-            <li> <a onclick="goBack()" class="nav"> Back </a> </li>
+            <li> <a onclick="goBack()" class="nav"> Next </a> </li>
         </ul>
         </div>
 
