--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -102,6 +102,11 @@ a:hover {
     top: 1%;
     right: 1%;
     z-index: -10000;
+
+    -webkit-filter: none;
+    -moz-filter: none;
+    -ms-filter: none;
+    filter: none;
 }
 
 h1.title {
@@ -220,7 +225,7 @@ ul li {
 .standout {
     font-family: Flux-Bold;
     letter-spacing: auto;
-    font-size: 3.75rem;
+    font-size: 4.75rem;
     font-weight: bold;
 }
 
@@ -283,6 +288,7 @@ button.toc:hover {
     align-items: center;
 }
 
+
 h1.section {
     font-family: Flux-Regular, Helvetica, sans-serif;
     display: inline-block;
@@ -296,6 +302,21 @@ h1.section {
     padding: 2%;
 }
 
+
+h1.section-fill {
+    font-family: Flux-Regular, Helvetica, sans-serif;
+    display: inline-block;
+    text-align: center;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 3rem;
+    border: 2px solid darksalmon;
+    background: darksalmon;
+    border-radius: 14px;
+    margin: 0px auto;
+    padding: 2%;
+}
+
 h1.section:hover {
     color: black;
     background: darksalmon;
@@ -303,14 +324,14 @@ h1.section:hover {
 }
 
 p {
-    font-size: 2vw;
-    line-height: 3.5rem;
+    font-size: 1.5vw;
+    line-height: 3.75rem;
     font-weight: normal;
     font-style: normal;
     text-indent: 15px;
     margin-left: 10%;
     margin-right: 10%;
-    margin-bottom: 1%;
+    margin-bottom: 8%;
 }
 
 p:first-of-type {
@@ -330,17 +351,45 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */    
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    filter: grayscale(100%);
+    filter: gray; /* IE 6-9 */
 }
 
 img:hover {
     transform: rotate(-5deg);
     /* https://codepen.io/sosuke/pen/Pjoqqp */
     /* filter: sepia(20%) saturate(1348%) hue-rotate(320deg); */
+
+    -webkit-filter: none;
+    -moz-filter: none;
+    -ms-filter: none;
+    filter: none;
+}
+
+img.arrow {
+    -webkit-filter: none;
+    -moz-filter: none;
+    -ms-filter: none;
+    filter: none;
 }
 
 blockquote p {
     font-size: 2rem;
-    line-height: auto;
+    line-height: 2.5rem;
     font-style: italic;
     text-align: center;
+    padding: 0;
+    margin-top: 0;
+}
+
+iframe {
+    display: block;
+    height: 50vh;
+    margin: 0 auto;
+    padding: 5%;
 }
