--- a/_layouts/gift-wrap.html
+++ b/_layouts/gift-wrap.html
@@ -21,7 +21,7 @@
     <footer class="bottom">
         <ul class="nav">
             <li class="standout"> <a href="{{"colophon.html" | relative_url}}"> Direct Action for Prison Abolition </a> </span> </li>
-            <li> <img src="{{"/assets/squiggly-arrow.png" | relative_url}}" alt="long arrow pointing right" class="arrow"> </li>
+            <!-- <li> <img src="{{"/assets/squiggly-arrow.png" | relative_url}}" alt="long arrow pointing right" class="arrow"> </li> -->
             <li> <a href="{{"index.html" | relative_url}}" class="nav">Cover</a> </li>
             <li> <a href="{{"/actions/contents.html" | relative_url}}" class="nav">Table of contents</a> </li>
             <li> <a onclick="goBack()" class="nav"> Next </a> </li>
