--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -225,7 +225,7 @@ ul li {
 .standout {
     font-family: Flux-Bold;
     letter-spacing: auto;
-    font-size: 4.75rem;
+    font-size: 2.25vw;
     font-weight: bold;
 }
 
@@ -235,10 +235,6 @@ li:first-of-type::after {
 
 .subtitle {
     font-family: Courier, monospace;
-}
-
-svg {
-    width: 100vw;
 }
 
 h1.toc {
@@ -254,6 +250,9 @@ h1.toc {
 .toc-stack {
     display: flex;
     align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: 5%;
 }
 
 .toc-items {
@@ -271,15 +270,13 @@ button.toc {
     font-family: Courier, monospace;
     font-size: 2.25vw;
     padding: 5%;
-    margin: 5%;
+    margin: 2.5%;
     vertical-align: text-top;
 }
 
 button.toc:hover {
     color: black;
     background: darksalmon;
-    /* background: url('assets/photo/free-joan-little.jpg'); */
-    /* transform: rotate(-5deg); */
 }
 
 .section-header {
@@ -325,7 +322,7 @@ h1.section:hover {
 
 p {
     font-size: 1.5vw;
-    line-height: 3.75rem;
+    line-height: 125%;
     font-weight: normal;
     font-style: normal;
     text-indent: 15px;
