--- a/_layouts/contents.html
+++ b/_layouts/contents.html
@@ -31,7 +31,7 @@ layout: gift-wrap
     <div class="toc-stack">
         <div class="toc-items">
             {% for item in page.types %}
-            <button class="toc"> <a href="{{"{{item.url}}/{{item.numUrl}}.html" | relative_url}}"> {{item.name}} </a> </button>
+            <button class="toc" onclick="document.location='{{"{{item.url}}/{{item.numUrl}}.html'">  {{item.name}} </button>
             {% endfor %}
         </div>
     </div>
