--- a/_layouts/cover.html
+++ b/_layouts/cover.html
@@ -4,6 +4,29 @@ layout: gift-wrap
 
 <div class="left">
 
+    <div class="acknowledgements">
+        <div>
+            <div class="section-header">
+                <h1 class="section"> Acknowledgements </h1>
+            </div>
+            <p>
+                <em>Direct Action for Prison Abolition</em>
+                is a zine created and published by
+                <a href="https://www.communityjusticeexchange.org/">Community Justice Exchange</a>
+                edited by Puck Lo, Rachel Foran, and Zohra Ahmed. Endless thanks to Amna Akbar, Brenda
+                Carter, and Elizabeth Nguyen for reviewing and providing critical feedback; to Elena Levi at
+                <a href="https://interferencearchive.org/">Interference Archive</a>
+                for providing archival images and materials; and to
+                <a href="https://netabomani.com">Neta Bomani</a>
+                for designing and developing the print and web versions of the zine with a special thank you to
+                <a href="https://www.clearblur.org/">Tim Burcham</a> for technical support.
+            </p>
+        </div>
+
+        <img src="{{"/assets/images/bang.png" | relative_url}}" alt="TK TK" class="arrow"
+            style="width: 20% !important;" />
+    </div>
+
 </div>
 
 <div class="right">
