--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -44,7 +44,6 @@ body {
 }
 
 .nav a:hover {
-    cursor: help;
     font-family: Flux-Bold, Helvetica, Serif;
     font-weight: bold;
     letter-spacing: inherit;
@@ -102,7 +101,6 @@ a:hover {
     top: 1%;
     right: 1%;
     z-index: -10000;
-
     -webkit-filter: none;
     -moz-filter: none;
     -ms-filter: none;
@@ -121,7 +119,6 @@ h1.title {
 }
 
 .direct {
-    margin-top: 2.75%;
     transform: rotate(10deg);
     text-align: center;
 }
@@ -143,12 +140,6 @@ h1.title {
 .abolition {
     text-align: center;
     transform: rotate(2.5deg);
-    /* color: black;
-    background-color: darksalmon;
-    padding-top: 2%;
-    padding-bottom: 1%;
-    text-shadow: 0px 0px transparent !important;
-    border-radius: 10px; */
 }
 
 h2 {
@@ -158,39 +149,7 @@ h2 {
     text-transform: uppercase;
     font-style: normal;
     font-weight: normal;
-    font-size: 4rem;
-}
-
-h2.credit {
-    font-family: Courier, monospace;
     font-size: 2vw;
-    font-style: normal;
-    font-weight: normal;
-    width: 30%;
-    text-transform: none;
-}
-
-.credit {
-    display: flex;
-    align-items: flex-start;
-    width: 100%;
-    padding-top: 5%;
-    justify-content: space-around;
-    margin-left: 1%;
-}
-
-h2.asterisk {
-    font-family: Flux-Regular, Courier, monospace;
-    font-weight: normal;
-    font-size: 5vw;
-}
-
-.asterisk:hover {
-    transform: rotate(160deg);
-}
-
-h2.credit:last-of-type::before {
-    padding-right: 5rem;
 }
 
 .bottom {
@@ -225,15 +184,11 @@ ul li {
 .standout {
     font-family: Flux-Bold;
     letter-spacing: auto;
-    font-size: 2.75vw;
+    font-size: 2.5vw;
     font-weight: bold;
 }
 
 li:first-of-type::after {
-    font-family: Courier, monospace;
-}
-
-.subtitle {
     font-family: Courier, monospace;
 }
 
@@ -259,6 +214,10 @@ h1.toc {
     flex: 50%;
 }
 
+button {
+    cursor: pointer;
+}
+
 button.toc {
     background: transparent;
     color: darksalmon;
@@ -279,12 +238,30 @@ button.toc:hover {
     background: darksalmon;
 }
 
+.acknowledgements {
+}
+
+.acknowledgements div {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: visibility 0s, opacity 0.5s linear;
+    transition: visibility 0s, opacity 0.5s linear;
+}
+
+.acknowledgements p {
+    font-size: 1.5vw;
+}
+
+.acknowledgements:hover div {
+    visibility: visible;
+    opacity: 1;
+}
+
 .section-header {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 
 h1.section {
     font-family: Flux-Regular, Helvetica, sans-serif;
@@ -299,7 +276,6 @@ h1.section {
     padding: 2%;
 }
 
-
 h1.section-fill {
     font-family: Flux-Regular, Helvetica, sans-serif;
     display: inline-block;
@@ -312,12 +288,6 @@ h1.section-fill {
     border-radius: 14px;
     margin: 0px auto;
     padding: 2%;
-}
-
-h1.section:hover {
-    color: black;
-    background: darksalmon;
-    transform: rotate(5deg);
 }
 
 p {
@@ -342,26 +312,24 @@ p:last-of-type {
 img {
     margin-top: 5%;
     max-width: 80%;
-    /* border: 2px solid darksalmon;
-    padding: 1%; */
     border-radius: 30px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-
-    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */    
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    /* Firefox 10+, Firefox on Android */
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
     filter: grayscale(100%);
-    filter: gray; /* IE 6-9 */
+    filter: gray;
+    /* IE 6-9 */
 }
 
 img:hover {
     transform: rotate(-5deg);
     /* https://codepen.io/sosuke/pen/Pjoqqp */
     /* filter: sepia(20%) saturate(1348%) hue-rotate(320deg); */
-
     -webkit-filter: none;
     -moz-filter: none;
     -ms-filter: none;
@@ -369,6 +337,7 @@ img:hover {
 }
 
 img.arrow {
+    height: 50%;
     -webkit-filter: none;
     -moz-filter: none;
     -ms-filter: none;
