--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -233,8 +233,7 @@ button.toc:hover {
     background: darksalmon;
 }
 
-.acknowledgements {
-}
+.acknowledgements {}
 
 .acknowledgements div {
     opacity: 0;
@@ -304,6 +303,13 @@ p:last-of-type {
     margin-bottom: 10%;
 }
 
+.excerpt {
+    font-family: Flux-Regular, Helvetica, sans-serif;
+    font-size: 0.75vw;
+    line-height: 0.5vw !important;
+    text-transform: uppercase;
+}
+
 img {
     margin-top: 5%;
     max-width: 80%;
@@ -311,18 +317,18 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
     /* Firefox 10+, Firefox on Android */
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
     filter: grayscale(100%);
-    filter: gray;
     /* IE 6-9 */
+    filter: gray;
 }
 
 img:hover {
-    transform: rotate(-5deg);
+    transform: rotate(5deg);
     -webkit-filter: none;
     -moz-filter: none;
     -ms-filter: none;
