update layout, toggle nav, etc.

--- a/_layouts/questions.html
+++ b/_layouts/questions.html
@@ -4,8 +4,7 @@ layout: gift-wrap
 
 <style>
     .left {
-        background: darksalmon;
-        /* url('{{"assets/photo/background/blm-the-all-nite-images.png" | relative_url}}') */
+        background: white;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -22,7 +21,7 @@ layout: gift-wrap
     }
 
     p {
-        background-color: darksalmon;
+        background-color: white;
         padding: 5%;
         transform: rotate(-1deg);
     }
