--- a/_layouts/gift-wrap.html
+++ b/_layouts/gift-wrap.html
@@ -12,76 +12,99 @@
   <link href="https://fonts.googleapis.com/css2?family=Miniver&display=swap" rel="stylesheet">
 </head>
 
-<body>
-  <div class="gift-wrap">
-    {{ content }}
+<body <div class="gift-wrap">
+  {{ content }}
   </div>
 
+  <div class="footer-button">
+    <label for="show-footer">
+      
+      <!-- <img src="{{"assets/images/curly-right-arrow.png" | relative_url}}"
+      alt="a scribble of an arrow pointing right directing you to reveal the navigation" class="up-arrow"
+      style="transition: cubic-bezier(0.39, 0.575, 0.565, 1)" />  -->
+    </label>
 
-  <footer class="bottom">
-    <ul class="nav">
-      <li class="standout"> <a href="{{"index.html" | relative_url}}"> Direct Action for Prison Abolition </a> </li>
+  </div>
 
-      {% capture actions %}{{page.collection}}{% endcapture %}
+  <footer class="pagination">
+    <div class="pagination-contents">
+      <input type="checkbox" id="show-footer" name="show-the-footer" class="r-foot-check">
+      <nav class="footer-body">
+        <div>
+          <div class="pagination-nav">
+            <ul class="nav">
+              <li class="standout"> <a href="{{"index.html" | relative_url}}"> Direct Action for Prison Abolition </a>
+              </li>
 
-      {% if page.collection %}
-      {% assign  document = site[actions] %}
-      {% endif %}
+              {% capture actions %}{{page.collection}}{% endcapture %}
 
-      {% for links in document  %}
-      {% if links.title == page.title %}
-      {% unless forloop.first %}
-      {% assign prevurl = prev.url %}
-      {% endunless %}
-      {% unless actions.last.url %}
-      {% assign next = document[forloop.index] %}
-      {% assign nexturl = next.url %}
-      {% endunless %}
-      {% endif %}
-      {% assign prev = links %}
-      {% if page.collection %}
-      {% assign  document = site[actions] %}
-      {% endif %}
+              {% if page.collection %}
+              {% assign  document = site[actions] %}
+              {% endif %}
 
-      {% for links in document  %}
-      {% if links.title == page.title %}
-      {% unless forloop.first %}
-      {% assign prevurl = prev.url %}
-      {% endunless %}
-      {% unless actions.last.url %}
-      {% assign next = document[forloop.index] %}
-      {% assign nexturl = next.url %}
-      {% endunless %}
-      {% endif %}
-      {% assign prev = links %}
-      {% endfor %}{% endfor %}
+              {% for links in document  %}
+              {% if links.title == page.title %}
+              {% unless forloop.first %}
+              {% assign prevurl = prev.url %}
+              {% endunless %}
+              {% unless actions.last.url %}
+              {% assign next = document[forloop.index] %}
+              {% assign nexturl = next.url %}
+              {% endunless %}
+              {% endif %}
+              {% assign prev = links %}
+              {% if page.collection %}
+              {% assign  document = site[actions] %}
+              {% endif %}
 
-      <li>
-        {% if prevurl %}
-        <a href="{{ prevurl | relative_url}}">
-          <img src="{{"assets/images/previous.png" | relative_url}}"
-            alt="a scribble of a circular back arrow directing you to the previous page" class="arrow" style="transition: cubic-bezier(0.39, 0.575, 0.565, 1)"/>
-        </a>
-        {% endif %}
-      </li>
-      <li> <a href="{{"/actions/contents.html" | relative_url}}" class="nav">Table of contents</a> </li>
-      <li>
-        {% if nexturl %}
-        <a href="{{ nexturl | relative_url }}">
-          <img src="{{"assets/images/next.png" | relative_url}}"
-            alt="another scribble of a circular back arrow directing you to the next page" class="arrow" style="transition: cubic-bezier(0.39, 0.575, 0.565, 1)"/>
-        </a>
-        {% endif %}
-      </li>
-    </ul>
-    </div>
+              {% for links in document  %}
+              {% if links.title == page.title %}
+              {% unless forloop.first %}
+              {% assign prevurl = prev.url %}
+              {% endunless %}
+              {% unless actions.last.url %}
+              {% assign next = document[forloop.index] %}
+              {% assign nexturl = next.url %}
+              {% endunless %}
+              {% endif %}
+              {% assign prev = links %}
+              {% endfor %}{% endfor %}
+              <li>
+                {% if prevurl %}
+                <a href="{{ prevurl | relative_url}}">
+                  <img src="{{"assets/images/previous.png" | relative_url}}"
+                    alt="a scribble of a circular back arrow directing you to the previous page" class="arrow"
+                    style="transition: cubic-bezier(0.39, 0.575, 0.565, 1)" />
+                </a>
+                {% endif %}
+              </li>
+              <li> <a href="{{"/actions/contents.html" | relative_url}}" class="nav">Table of contents</a> </li>
+              <!-- <li>
+                {% for page in site.actions %}
+                <a href="../{{page.section-url}}.html"> {{ page.section }} </a>
+                {% endfor %}
+              </li> -->
+              <li>
+                {% if nexturl %}
+                <a href="{{ nexturl | relative_url }}">
+                  <img src="{{"assets/images/next.png" | relative_url}}"
+                    alt="another scribble of a circular back arrow directing you to the next page" class="arrow"
+                    style="transition: cubic-bezier(0.39, 0.575, 0.565, 1)" />
+                </a>
+                {% endif %}
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+  </footer>
 
-    <script>
-      function goBack() {
-        window.history.back();
-      }
-    </script>
+  <script>
+    function goBack() {
+      window.history.back();
+    }
+  </script>
 
-    <script src="{{"/assets/js/layout.js" | relative_url}}"></script>
+  <script src="{{"/assets/js/layout.js" | relative_url}}"></script>
 
 </body>
