--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -26,7 +26,7 @@ html {
 
 body {
     background-color: black;
-    color: darksalmon;
+    color: white;
     font-family: Courier, monospace;
     font-weight: 400;
     font-style: normal;
@@ -34,7 +34,7 @@ body {
 }
 
 ::selection {
-    background: darksalmon;
+    background: white;
     color: black
 }
 
@@ -44,13 +44,13 @@ body {
 }
 
 a:link, a:active, a:visited {
-    color: darksalmon;
-    border-bottom: 0.25vh solid darksalmon;
+    color: white;
+    border-bottom: 0.25vh solid white;
     text-decoration: none;
 }
 
 a:hover {
-    color: darksalmon;
+    color: white;
     text-decoration: none;
     border-bottom: 0px;
 }
@@ -65,7 +65,7 @@ a:hover {
 }
 
 .gift-wrap {
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     overflow: hidden;
     display: flex;
@@ -81,7 +81,7 @@ a:hover {
 }
 
 .left {
-    border-right: 2px solid darksalmon;
+    border-right: 2px solid white;
 }
 
 .left::-webkit-scrollbar, .right::-webkit-scrollbar {
@@ -92,7 +92,7 @@ a:hover {
 .title-img {
     width: 50%;
     position: fixed;
-    top: 1%;
+    top: 10%;
     right: 1%;
     z-index: -10000;
     -webkit-filter: none;
@@ -103,7 +103,7 @@ a:hover {
 
 h1.title {
     font-family: Flux-Bold, Helvetica, sans-serif;
-    font-size: 6vw;
+    font-size: 6.75vw;
     text-transform: uppercase;
     font-style: normal;
     font-weight: bold;
@@ -113,7 +113,7 @@ h1.title {
 }
 
 .direct {
-    margin-top: 1%;
+    margin-top: 1vh;
     transform: rotate(10deg);
     text-align: center;
 }
@@ -147,16 +147,101 @@ h2 {
     font-size: 2vw;
 }
 
-.bottom {
+.pagination {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.pagination-contents {
+    position: relative;
+}
+
+.footer-button {
+    position: absolute;
+    right: 60px;
+    bottom: 0;
+    z-index: 9;
+}
+
+.footer-button label {
+    font-family: Flux-Regular, Arial, Helvetica, sans-serif;
+    font-size: 3vw;
+    position: fixed;
+    bottom: 1%;
+    right: 0%;
+    background: transparent;
+    color: white;
+    cursor: pointer;
+    display: inline-block;
+    text-align: right;
+    padding-right: 1%;
+    width: auto;
+    height: 5.75vh;
+}
+
+img.up-arrow {
+    height: 50%;
+    -webkit-filter: none;
+    -moz-filter: none;
+    -ms-filter: none;
+    filter: none;
+}
+
+button.current-section {
+    font-family: Flux-Regular, Arial, Helvetica, sans-serif;
+    font-size: 2vw;
+    background: black;
+    color: white;
+    border: 0px;
+    padding: 1%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    text-align: center;
+    z-index: 10000;
+}
+
+.footer-button label::before {
+    content: "\1F440"
+    /* content: url(../images/up.png); */
+}
+
+.footer-body {
+    background: black;
+    position: absolute;
+    bottom: 0;
+    z-index: 8;
     width: 100%;
-    height: 10vh;
-    border-radius: 2%;
+    height: 7vh;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all 0.25s;
+    -moz-transition: all 0.25s;
+    -ms-transition: all 0.25s;
+    -o-transition: all 0.25s;
+    transition: all 0.25s;
+}
+
+.r-foot-check {
+    display: none;
+}
+
+input.r-foot-check:checked+.footer-body {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transition: all 0.25s;
+    -moz-transition: all 0.25s;
+    -ms-transition: all 0.25s;
+    -o-transition: all 0.25s;
+    transition: all 0.25s;
 }
 
 .nav {
     width: 100%;
-    /* background: black; */
-    border-top: 2px solid darksalmon;
+    border-top: 2px solid white;
     padding: 1rem;
     height: inherit;
     align-items: center;
@@ -193,7 +278,7 @@ h1.toc {
     font-weight: normal;
     font-style: normal;
     padding-bottom: 3%;
-    border-bottom: 2px solid darksalmon;
+    border-bottom: 2px solid white;
     margin: 0;
 }
 
@@ -215,8 +300,8 @@ button {
 
 button.toc {
     background: transparent;
-    color: darksalmon;
-    border: 2px solid darksalmon;
+    color: white;
+    border: 2px solid white;
     border-radius: 15%;
     width: 18vw;
     height: 18vw;
@@ -230,12 +315,11 @@ button.toc {
 
 button.toc:hover {
     color: black;
-    background: darksalmon;
+    background: white;
 }
 
-.acknowledgements {}
-
 .acknowledgements div {
+    margin-top: 1vh;
     opacity: 0;
     visibility: hidden;
     -webkit-transition: visibility 0s, opacity 0.5s linear;
@@ -264,7 +348,7 @@ h1.section {
     font-weight: normal;
     font-style: normal;
     font-size: 1.5vw;
-    border: 0.25vh solid darksalmon;
+    border: 0.25vh solid white;
     border-radius: 14px;
     margin: 0px auto;
     padding: 2%;
@@ -277,8 +361,8 @@ h1.section-fill {
     font-weight: normal;
     font-style: normal;
     font-size: 3rem;
-    border: 2px solid darksalmon;
-    background: darksalmon;
+    border: 2px solid white;
+    background: white;
     border-radius: 14px;
     margin: 0px auto;
     padding: 2%;
@@ -336,7 +420,7 @@ img:hover {
 }
 
 img.arrow {
-    height: 50%;
+    height: 20%;
     -webkit-filter: none;
     -moz-filter: none;
     -ms-filter: none;
