more copy edits

--- a/_layouts/cover.html
+++ b/_layouts/cover.html
@@ -11,14 +11,14 @@ layout: gift-wrap
             </div>
             <p>
                 <em>Direct Action for Prison Abolition</em>
-                is a zine created and published by
+                is created and published by
                 <a href="https://www.communityjusticeexchange.org/">Community Justice Exchange</a>
-                edited by Puck Lo, Rachel Foran, and Zohra Ahmed. Endless thanks to Amna Akbar, Brenda
-                Carter, and Elizabeth Nguyen for reviewing and providing critical feedback; to Elena Levi at
+                and edited by Puck Lo, Rachel Foran, and Zohra Ahmed. Endless thanks to Amna Akbar, Brenda
+                Carter, and Elizabeth Nguyen for reviewing and providing critical feedback; Elena Levi at
                 <a href="https://interferencearchive.org/">Interference Archive</a>
-                for providing archival images and materials; and to
+                for providing archival images and materials; and
                 <a href="https://netabomani.com">Neta Bomani</a>
-                for designing and developing the print and web versions of the zine with a special thank you to
+                for designing and developing print and web versions of the zine. Special thanks to
                 <a href="https://www.clearblur.org/">Tim Burcham</a> for technical support.
             </p>
         </div>
