--- a/_layouts/gift-wrap.html
+++ b/_layouts/gift-wrap.html
@@ -17,13 +17,7 @@
   </div>
 
   <div class="footer-button">
-    <label for="show-footer">
-      
-      <!-- <img src="{{"assets/images/curly-right-arrow.png" | relative_url}}"
-      alt="a scribble of an arrow pointing right directing you to reveal the navigation" class="up-arrow"
-      style="transition: cubic-bezier(0.39, 0.575, 0.565, 1)" />  -->
-    </label>
-
+    <label for="show-footer"></label>
   </div>
 
   <footer class="pagination">
