--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -65,7 +65,7 @@ a:hover {
 }
 
 .gift-wrap {
-    height: 100vh;
+    height: 90vh;
     width: 100%;
     overflow: hidden;
     display: flex;
@@ -204,39 +204,11 @@ button.current-section {
     z-index: 10000;
 }
 
-.footer-button label::before {
-    content: "\1F440"
-    /* content: url(../images/up.png); */
-}
-
-.footer-body {
-    background: black;
-    position: absolute;
-    bottom: 0;
-    z-index: 8;
+.bottom {
     width: 100%;
-    height: 7vh;
-    opacity: 0;
-    visibility: hidden;
-    -webkit-transition: all 0.25s;
-    -moz-transition: all 0.25s;
-    -ms-transition: all 0.25s;
-    -o-transition: all 0.25s;
-    transition: all 0.25s;
-}
-
-.r-foot-check {
-    display: none;
-}
-
-input.r-foot-check:checked+.footer-body {
-    opacity: 1;
-    visibility: visible;
-    -webkit-transition: all 0.25s;
-    -moz-transition: all 0.25s;
-    -ms-transition: all 0.25s;
-    -o-transition: all 0.25s;
-    transition: all 0.25s;
+    height: 10vh;
+    border-radius: 2%;
+    overflow: hidden;
 }
 
 .nav {
