bring back old nav

--- a/_layouts/gift-wrap.html
+++ b/_layouts/gift-wrap.html
@@ -59,7 +59,7 @@
         {% if prevurl %}
         <a href="{{ prevurl | relative_url}}">
           <img src="{{"assets/images/previous.png" | relative_url}}"
-            alt="a scribble of a circular back arrow directing you to the previous page" class="arrow"
+            alt="a scribble of a left pointing arrow arrow directing you to the previous page" class="arrow"
             style="transition: cubic-bezier(0.39, 0.575, 0.565, 1)" />
         </a>
         {% endif %}
@@ -74,19 +74,12 @@
         {% if nexturl %}
         <a href="{{ nexturl | relative_url }}">
           <img src="{{"assets/images/next.png" | relative_url}}"
-            alt="another scribble of a circular back arrow directing you to the next page" class="arrow"
+            alt="another arrow which is pointing right and directing you to the next page" class="arrow"
             style="transition: cubic-bezier(0.39, 0.575, 0.565, 1)" />
         </a>
         {% endif %}
-
       </li>
     </ul>
-    </div>
-
-    <li> {% if prevurl %}<a href="{{ prevurl | relative_url}}"> Back </a>{% endif %} </li>
-    <li> {% if nexturl %} <a href="{{ nexturl | relative_url }}"> Next </a> {% endif %} </li>
-    </ul>
-    </div>
   </footer>
 
   <script src="{{"/assets/js/layout.js" | relative_url}}"></script>
