--- a/_layouts/cover.html
+++ b/_layouts/cover.html
@@ -3,7 +3,89 @@ layout: gift-wrap
 ---
 
 <div class="left">
+    {{ content }}
+</div>
 
+<div class="right">
+
+    <div class="section-header">
+        <h1 class="section"> Introduction </h1>
+    </div>
+    <p>We’re in a global pandemic — and we’re in an unprecedented national uprising against the police and white
+        supremacy, and the ways they render Black life disposable.</p>
+
+    <p>In April, when the world began to reckon with COVID-19, writer Arundhati Roy challenged us to use <a
+            href="https://www.ft.com/content/10d8f5e8-74eb-11ea-95fe-fcd274e920ca">this pandemic as a portal</a>.</p>
+
+    <p>During those earlier stages of the pandemic, we saw policing reduce dramatically, arrest rates plummet in many
+        places, and court dates canceled. Some people who would have been taken into custody, prior to the pandemic,
+        were not. At the same time, government officials with control over jails and prisons felt increasing pressure to
+        release at least some people who were locked up, due to the rampant spread of COVID-19.</p>
+
+    <p><img src="/da4a/assets/images/introduction/abolition-is-a-act-of-creation.jpg" alt="A sidewalk mural which says &quot;abolition is a act of creation&quot; surrounded in green vines and yellow flowers.
+" /></p>
+    <blockquote>
+        <p>A sidewalk mural which says “abolition is a act of creation” surrounded in green vines and yellow flowers.
+            Image via <a href="https://commons.wikimedia.org/w/index.php?curid=92698146">Andrew Ratto/Wikimedia</a>.</p>
+    </blockquote>
+
+    <p>We wondered: If the Prison-Industrial-Complex is shrinking despite itself, can we ensure that it continues to do
+        so?</p>
+
+    <p>We also saw, simultaneously, the creep of technologies of surveillance and social control (like <a
+            href="https://gizmodo.com/when-your-freedom-depends-on-an-app-1843109198">GPS tracking apps</a> and ankle
+        shackles mandated for release) expanding and normalizing extra-carceral control. Over time, as political
+        decisions continue to prioritize systems of punishment over all other government functions, these technologies
+        have only more closely <a
+            href="https://theintercept.com/2020/05/25/coronavirus-tracking-bracelets-monitors-surveillance-supercom/">merged
+            criminalizing tracking tools with those that are marketed for virus contact-tracing</a>.</p>
+
+    <p>In that context, we wondered how abolitionist organizing and direct action could influence and even make
+        permanent shrinkages to existing carceral systems, and prevent new ones from forming.</p>
+
+    <p>Now, our context changes still. Months of living with the dual realities of continued viral spread as well as a
+        massive, nationwide uprising against the police and anti-blackness have led to demands to defund the police
+        becoming mainstream, and national conversations about the practicality of prison abolition. As we face mass
+        unemployment, evictions, and ongoing waves of viral infection, there are unprecedented opportunities for direct
+        action, in solidarity with protesters, and with those who face the brunt of criminalization.</p>
+
+    <p><img src="/da4a/assets/images/introduction/power-to-the-people.jpg"
+            alt="This cardboard sign is a rectangular piece of cardboard with handwritten text in black marker. The text reads &quot;Power to the People&quot;. There is a narrow flat stick of wood as a handle mounted to the back with adhesive. There are also four strips of black tape across the handle and the back of the sign. There are two names written on the back." />
+    </p>
+    <blockquote>
+        <p>A protest sign which says, “power to the people.” Image via Collection of the Smithsonian National Museum of
+            African American History.</p>
+    </blockquote>
+
+    <p>How do we up the ante? What would a strategic escalation of tactics from prison abolitionists look like in the
+        courtrooms, in jails and prisons? <strong>How can we disrupt and shut down the criminal legal system, short or
+            long term, as part of a broader campaign to #FreeThemAll and #DefundPolice?</strong></p>
+
+    <p>Our comrades in other social and political movements have provided us with some well-tested direct action
+        tactics: <a href="https://ny.curbed.com/2020/7/1/21309981/bronx-rent-strike-tenants">rent strikes</a>, <a
+            href="https://www.kiro7.com/news/trending/coronavirus-arizona-school-system-nixes-monday-reopening-after-teachers-stage-sickout/YCDDXEOPDBGQRGNR4JDWDYZK6E/">sick
+            outs</a>, and <a
+            href="https://www.vice.com/en_us/article/y3mjxg/general-electric-workers-walk-off-the-job-demand-to-make-ventilators">secondary
+            strikes</a>, to name a few. This zine looks to the far and recent past for a few examples. These collective
+        and disruptive actions take courage, and are met with sanction, but they push institutions and test the capacity
+        of organizers to withstand and rise above the short-term retaliation. They can help build long-term,
+        countervailing power.</p>
+
+    <p>We hope to adapt such tactics of disruption to our context of agitating for prison abolition.</p>
+
+    <p>Could direct action make the daily operation of the criminal legal system so difficult that it could force
+        carceral bureaucrats to stop incarcerating people during and after the pandemic? Which disruptive tactics are
+        suited for the courtroom or criminal legal processes? What would it look like to repurpose the labor power of
+        those who work in courthouses? How do we create pathways for direct action for individuals and families directly
+        impacted by incarceration as well as the larger public? How do we slow or shut down the machinery of
+        incarceration? What awaits us on the other side of this portal?</p>
+
+    <p>We hope these questions inspire you to find answers and ask new ones.</p>
+
+</div>
+
+
+<!-- 
     <div class="acknowledgements">
         <div>
             <div class="section-header">
@@ -25,10 +107,5 @@ layout: gift-wrap
 
         <img src="{{"/assets/images/bang.png" | relative_url}}" alt="TK TK" class="arrow"
             style="width: 35% !important;" />
-    </div>
-
-</div>
-
-<div class="right">
-    {{ content }}
+    </div> -->
 </div>
