--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -93,7 +93,7 @@ a:hover {
     width: 50%;
     position: fixed;
     top: 10%;
-    right: 1%;
+    left: 1%;
     z-index: -10000;
     -webkit-filter: none;
     -moz-filter: none;
