--- a/_layouts/questions.html
+++ b/_layouts/questions.html
@@ -4,7 +4,7 @@ layout: gift-wrap
 
 <style>
     .left {
-        background: white;
+        background: lightsalmon;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -21,7 +21,7 @@ layout: gift-wrap
     }
 
     p {
-        background-color: white;
+        background-color: lightsalmon;
         padding: 5%;
         transform: rotate(-1deg);
     }
