--- a/_layouts/contents.html
+++ b/_layouts/contents.html
@@ -4,7 +4,7 @@ layout: gift-wrap
 
 <style>
 .right {
-        background: white;
+        background: lightsalmon;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
