--- a/_layouts/gift-wrap.html
+++ b/_layouts/gift-wrap.html
@@ -64,13 +64,24 @@
         </a>
         {% endif %}
       </li>
-      <li> <a href="{{"/actions/contents.html" | relative_url}}" class="nav">Table of contents</a> </li>
-      <!-- <li> -->
-        <!-- <a href="{{../../" | relative_url}}" class="nav"> Back to section </a> -->
-        <!-- {% for page in site.actions %}
-        <a href="../{{page.section-url}}.html"> {{ page.section }} </a>
-        {% endfor %} -->
-      <!-- </li> -->
+      <li>
+        <div class="dropdown">
+          <button class="dropbtn" onclick="document.location='{{"/actions/contents.html" | relative_url}}'">Table of
+            Contents</button>
+          <div class="dropdown-content">
+            {% if page.url contains 'actions' %}
+            <a href="/da4a/actions/debt-strikes/1-debt-strikes.html"> Debt Strikes </a>
+            <a href="/da4a/actions/encampments/2-encampments.html"> Encampments </a>
+            <a href="/da4a/actions/inside-outside/3-inside-outside.html"> Inside/Outside Actions </a>
+            <a href="/da4a/actions/jail-court-solidarity/4-jail-court-solidarity.html"> Jail & Court Solidarity Actions </a>
+            <a href="/da4a/actions/labor-strikes/5-labor-strikes.html"> Labor Strikes </a>
+            <a href="/da4a/actions/questions/6-questions.html"> Questions </a>
+            {% endif %}
+
+          </div>
+        </div>
+        <!-- <a href="{{"/actions/contents.html" | relative_url}}" class="nav">Table of contents</a>  -->
+      </li>
       <li>
         {% if nexturl %}
         <a href="{{ nexturl | relative_url }}">
