--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -55,6 +55,46 @@ a:hover {
     border-bottom: 0px;
 }
 
+.dropbtn {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background: transparent;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background: black;
+    font-size: inherit;
+    width: 100%;
+    z-index: 1;
+    bottom: 100%;
+}
+
+.dropdown-content a {
+    margin-top: 3%;
+    margin-bottom: 5%;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    color: black;
+    background-color: lightsalmon;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 .toc a {
     text-decoration: none;
     border-bottom: 0px;
@@ -208,7 +248,7 @@ button.current-section {
     width: 100%;
     height: 10vh;
     border-radius: 2%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .nav {
